terraform/aws/aws-eks-module-ipv4/forgerock/alb-ingress/ig-sample.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: ig
    app.kubernetes.io/component: ig
    app.kubernetes.io/instance: ig
    app.kubernetes.io/name: ig
    app.kubernetes.io/part-of: forgerock
    tier: middle
  name: ig
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ig
      app.kubernetes.io/component: ig
      app.kubernetes.io/instance: ig
      app.kubernetes.io/name: ig
      app.kubernetes.io/part-of: forgerock
      tier: middle
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "false"
      creationTimestamp: null
      labels:
        app: ig
        app.kubernetes.io/component: ig
        app.kubernetes.io/instance: ig
        app.kubernetes.io/name: ig
        app.kubernetes.io/part-of: forgerock
        tier: middle
    spec:
      volumes:
      - name: ig-volume
        configMap:
          name: ig-certificates
      containers:
      - env:
        - name: AGENT_SECRET_ID
          valueFrom:
            secretKeyRef:
              name: agent-secret-id
              key: password
        - name: NAMESPACE
          valueFrom:
            fieldRef:
              apiVersion: v1
              fieldPath: metadata.namespace
        - name: MY_POD_IP
          valueFrom:
            fieldRef:
              apiVersion: v1
              fieldPath: status.podIP
        image: devforge1/ig:v2023-v4-sample
        imagePullPolicy: Always
        name: ig
        volumeMounts:
        - name: ig-volume
          mountPath: /var/ig/secrets
        securityContext:
          capabilities:
            add:
            - NET_ADMIN
        ports:
        - containerPort: 8080
          protocol: TCP
        resources:
          requests:
            cpu: 200m
            memory: 512Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext:
        runAsGroup: 0
        runAsUser: 11111
      terminationGracePeriodSeconds: 30
      hostNetwork: true
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: ig
    app.kubernetes.io/component: ig
    app.kubernetes.io/instance: ig
    app.kubernetes.io/name: ig
    app.kubernetes.io/part-of: forgerock
    tier: middle
  name: ig
spec:
  ipFamilies:
  - IPv6
  ipFamilyPolicy: PreferDualStack
  ports:
  - name: ig
    port: 8443
    protocol: TCP
    targetPort: 8080
  selector:
    app: ig
    app.kubernetes.io/component: ig
    app.kubernetes.io/instance: ig
    app.kubernetes.io/name: ig
    app.kubernetes.io/part-of: forgerock
    tier: middle
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/ip-address-type: dualstack
    alb.ingress.kubernetes.io/load-balancer-name: ig-alb
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 8080}, {"HTTP": 8443}]'
    alb.ingress.kubernetes.io/tags: Purpose=lab,ApplicationIDName=frig-dev,RSMs=X265140,BusinessUnit=gtcto,CostCenter=713104,__Exception-ELBLogging=0123
    alb.ingress.kubernetes.io/group.name: ig-group
    alb.ingress.kubernetes.io/healthy-threshold-count: '2'
    alb.ingress.kubernetes.io/unhealthy-threshold-count: '2'
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: '8'
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: '30'
    alb.ingress.kubernetes.io/healthcheck-path: /
    alb.ingress.kubernetes.io/healthcheck-port: '8443'
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP
    alb.ingress.kubernetes.io/success-codes: '200'
  name: ig
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ig
                port:
                  number: 8443
